--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>proyecto con JavaScript</title>
     <!--ESTILOS CSS-->
     <link rel="stylesheet" type="text/css" href="css/styles.css"/>
-  //  <link id="theme" rel="stylesheet" type="text/css" />
+     <link id="theme" rel="stylesheet" type="text/css" />
     
     <!--JQUERY-->
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -99,7 +99,7 @@
 
     <footer>
         Master de JS &copy;
-
+        <a href="#" class="subir">Ir arriba</a>
     </footer>
  </body>
 </html>
